v26.3.0.13/MatrixOne/Reference/Functions-and-Operators/Other/stage_list.md
---
title: "STAGE_LIST()"
doc_type: reference
mysql_compat: mo_only
differs_from_mysql: []
mo_only:
  - "STAGE_LIST() — MO-specific stage management function (currently unimplemented, returns ERROR 20105)"
since: unknown
last_updated: 2026-05-21
llms_summary: "STAGE_LIST() is not available on MO 3.0.12; other STAGE operations (CREATE/ALTER/DROP/SHOW STAGE) work as documented."
---
# **STAGE_LIST()**

> **Note:** `STAGE_LIST()` is not available on MO 3.0.12. Calling it produces `ERROR 20105: not supported: function or operator 'stage_list'`. Other stage operations (`CREATE STAGE`, `ALTER STAGE`, `DROP STAGE`, `SHOW STAGES`) work as documented.

> The STAGE_LIST() function is used to view the directories and files in the stage.

## **Function description**

The `STAGE_LIST()` function is used to view the directories and files in the stage.

## **Function syntax**

```
>STAGE_LIST(stage://<stage_name>/<path>/<file_name>) as f;
```

## **Parameter explanation**

| Parameters | Description |
| ----| ----|
| stage_name | Required. The name of the stage. |
| path | Optional. The directory name under stage. |
| file_name | Optional. The file name under stage can use wildcard character *|

## **Example**

There are the following files and directories under the directory `/Users/admin/case`:

```bash
(base) admin@192 case % ls
customer	student.csv	t1.csv		t2.txt		t3		user.txt
```

<!-- validator-ignore-exec -->
```sql
create stage stage_test url = 'file:///Users/admin/case';

mysql> select * from stage_list('stage://stage_test') as f;
+-------------------------------+
| file                          |
+-------------------------------+
| /Users/admin/case/customer    |
| /Users/admin/case/student.csv |
| /Users/admin/case/t1.csv      |
| /Users/admin/case/t2.txt      |
| /Users/admin/case/t3          |
| /Users/admin/case/user.txt    |
+-------------------------------+
6 rows in set (0.00 sec)

mysql> select * from stage_list('stage://stage_test/t*') as f;
+--------------------------+
| file                     |
+--------------------------+
| /Users/admin/case/t1.csv |
| /Users/admin/case/t2.txt |
+--------------------------+
2 rows in set (0.01 sec)

mysql> select * from stage_list('stage://stage_test/customer') as f;
Empty set (0.00 sec)
```
